--- a/src/resources/templates/index.html
+++ b/src/resources/templates/index.html
@@ -1,5 +1,5 @@
 <html>
     <body>
-        <a href="/rest/service/greeting">/rest/service/greeting</a>
+        <a th:each="action : ${actions}" th:href="${action}" th:text="${action}"></a>
     </body>
 </html>
